# c-alsa-examples

./: .gitignore  README.md  meson.build
async-capture/: main.c  meson.build
async-playback/: meson.build
capture/: main.c  meson.build
common/: meson.build  tracer.h  wave.c  wave.h
network-streamed-playback-capture/: meson.build
playback/: main.c  meson.build
playback-nonblock/: main.c  meson.build
simultaneous-playback-capture/: meson.build
utils/: list-devices.c  meson.build  volume-update.c
